# UMHack26-Hireflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_INTERVIEWER_README.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  GCP_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  deploy_gcp.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  Dockerfile  package-lock.json  package.json  prisma.config.ts  server.ts  tsconfig.json
backend/prisma/: schema.prisma  schema.prisma.stashed  seed.ts
backend/prisma/migrations/20260419090153_init/: migration.sql
backend/prisma/migrations/20260421045841_add_interview_fields/: migration.sql
backend/prisma/migrations/20260422101045_init/: migration.sql
backend/prisma/migrations/20260423000000_remove_judge0_answer_key_fields/: migration.sql
backend/prisma/migrations/20260423090000_add_job_closing_date/: migration.sql
backend/prisma/migrations/20260423102753_init/: migration.sql
backend/prisma/migrations/20260423110138_add_telegram_token/: migration.sql
backend/prisma/migrations/20260423150056_add_system_config/: migration.sql
backend/scripts/: crawl_url.py  list_candidates.py  list_candidates.ts
backend/src/: app.ts
backend/src/config/: prisma.ts
backend/src/controllers/: auth.controller.ts  bias-audit.controller.ts  candidate-portal.controller.ts  candidate.controller.ts  config.controller.ts  dashboard.controller.ts  interview.controller.ts  investigation.controller.ts  job.controller.ts  workflow.controller.ts
backend/src/middleware/: auth.middleware.ts
backend/src/routes/: auth.routes.ts  bias-audit.routes.ts  candidate.routes.ts  config.routes.ts  cv.routes.ts  dashboard.routes.ts  interview.routes.ts  investigation.routes.ts  job.routes.ts  portal.routes.ts  telegram.routes.ts
backend/src/services/: auth.service.ts  auto-screen.service.ts  bias-audit.service.ts  candidate.service.ts  code-exec.service.ts  crawl4ai.service.ts  dashboard.service.ts  email.service.ts  glm.service.ts  interview-orchestrator.service.ts  investigation.service.ts  job.service.ts  proctor.service.ts  ranking.service.ts  telegram-bot.service.ts  telegram-utils.ts  vertical-templates.service.ts  workflow-automation.service.ts  workflow-state.service.ts
backend/src/types/: shims.d.ts
backend/src/workflow/: engine.ts  states.ts
client/: README.md
client/joinly_client/: agent.py  prompts.py
dashboard/: Dockerfile  main.py  pyproject.toml
docs/: ai-prescreen-verification-checklist.md  backend.md  learning-log.md  workflow-states.md
examples/: config_notion.json
frontend/: .env.example  HR_SignUp.jsx  index.html  package-lock.json  package.json
frontend/src/: App.jsx  HR_SignUp.jsx  index.css  main.jsx
frontend/src/components/: CvEvaluationModal.jsx  InDepthCVAnalysisModal.jsx  SharedLayout.jsx
frontend/src/pages/: Apply.jsx  Auth.jsx  AuthCallback.jsx  BiasAuditDashboard.jsx  CandidateDetail.jsx  CandidatePortal.jsx  Candidates.jsx  CreateJob.jsx  Dashboard.jsx  InterviewComplete.jsx  InterviewIntro.jsx  InterviewResponse.jsx  InterviewRoom.jsx  JobDetail.jsx  Jobs.jsx  Login.jsx  RankedShortlist.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/styles/: buttonStyles.js  common.css  createjob.css  dashboard.css  global.css  sharedlayout.css  signup.css
frontend/src/utils/: dateFormat.js  liveStatus.js
joinly/: container.py
joinly-meetingbot/: .env.example  LICENSE
joinly-meetingbot/client/: pyproject.toml
joinly-meetingbot/client/joinly_client/: __init__.py  client.py  main.py  types.py  utils.py
joinly-meetingbot/common/: README.md  pyproject.toml
joinly-meetingbot/common/joinly_common/: types.py
joinly-meetingbot/dashboard/: Dockerfile  pyproject.toml
joinly-meetingbot/docker/: Dockerfile  Dockerfile.cuda  Dockerfile.lite  Dockerfile.simple
joinly-meetingbot/examples/: client_example.py  config_tavily.json
joinly-meetingbot/joinly/: core.py  main.py  server.py  session.py  settings.py  types.py
joinly-meetingbot/joinly/controllers/transcription/: default.py
joinly-meetingbot/joinly/providers/: base.py
joinly-meetingbot/joinly/providers/browser/: __init__.py  browser_session.py  camera_feed.py  screen_share.py
joinly-meetingbot/joinly/services/stt/: deepgram.py  google.py
joinly-meetingbot/joinly/services/tts/: deepgram.py  google.py  kokoro.py  resemble.py
joinly-meetingbot/joinly/services/vad/: base.py  hybrid.py  silero.py  webrtc.py
joinly-meetingbot/joinly/utils/: audio.py  clock.py  events.py  logging.py
joinly-meetingbot/scripts/: download_assets.py
joinly-meetingbot/tests/: conftest.py  test_camera_feed.py  test_e2e.py  test_screen_share.py
joinly-meetingbot/tests/data/: README.md
joinly-meetingbot/tests/data/speech_audio/: test_samples.json
joinly-meetingbot/tests/utils/: mockup_browser_controller.py  mockup_browser_meeting.py
joinly/controllers/speech/: default.py
joinly/providers/browser/: meeting_provider.py
joinly/providers/browser/devices/: pulse_module_manager.py  virtual_speaker.py
joinly/services/stt/: whisper.py
joinly/services/tts/: elevenlabs.py
joinly/utils/: usage.py
scripts/: vnc_watchdog.sh
tests/: test_meeting_transcription.py
(+3 files in other folders)
