[project]
name = "joinly"
version = "0.5.3"
description = "Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@joinly.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "click>=8.1.8",
    "deepgram-sdk>=4.1.1",
    "elevenlabs>=2.5.0",
    "faster-whisper>=1.1.1",
    "fastmcp>=2.10.5",
    "google-genai>=1.30.0",
    "joinly-client>=0.1.18",
    "joinly-common>=0.1.3",
    "kokoro-onnx>=0.4.9",
    "mcp>=1.12.0",
    "numpy>=2.2.4",
    "onnxruntime>=1.21.1",
    "pillow>=11.3.0",
    "playwright==1.58.0",
    "python-dotenv>=1.1.0",
    "semchunk>=3.2.1",
    "webrtcvad-wheels>=2.0.14",
]

[project.scripts]
joinly = "joinly.main:cli"

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.22.0",
]

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "jiwer>=3.1.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]

[tool.uv.sources]
joinly-client = { workspace = true }
joinly-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joinly"]

[tool.uv.workspace]
members = [
    "client",
    "common",
    "dashboard",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pycache__",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "COM819",
    "D100",
    "D104",
    "D203",
    "D213",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "EXE002",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
]
"scripts/**/*.py" = [
    "INP001",
]
"examples/**/*.py" = [
    "INP001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
venv = ".venv"
typeCheckingMode = "standard"
include = [
    "joinly",
    "client",
    "common",
    "tests"
]
exclude = [
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".venv"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_level = "INFO"
log_cli_level = "INFO"
log_cli = true
markers = [
    "manual: requires a real meeting and human interaction",
]
addopts = "-m 'not manual'"
