[project]
name = "joinly-client"
version = "0.1.18"
description = "Client for joinly: Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@joinly.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fastmcp>=2.10.5",
    "joinly-common>=0.1.3",
    "mcp>=1.27.0",
    "openai<=1.99.1",
    "pydantic-ai-slim[anthropic,openai,google]>=0.4.9",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
joinly-client = "joinly_client.main:cli"

[tool.uv.sources]
joinly-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joinly_client"]

[project.urls]
"Repository" = "https://github.com/joinly-ai/joinly"
