[project]
name = "joinly-dashboard"
version = "0.1.0"
description = "Meeting Bot Dashboard for joinly"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"